--- a/Angular/src/app/home/home.component.html
+++ b/Angular/src/app/home/home.component.html
@@ -1,13 +1,15 @@
 <div class="pozadina">
-  <p style="font-weight: bold; font-family: Montserrat; font-size: 70px; text-align: center"> Welcome!</p>
-  <br>
-  <br>
-  <br><br>
-  <p style="font-weight: bold; font-family: Montserrat; font-size: 40px; text-align: center">We are glad that you decided to donate through our site!</p>
-  <br><br><br><br>
+    <p style="font-weight: bold; font-family: Montserrat; font-size: 70px; text-align: center"> Welcome!</p>
+    <p style="font-weight: bold; font-family: Montserrat; font-size: 30px; text-align: center"> To see stories and be able to donate, please log in.</p>
+  <div class="pomjeri">
+    <div class="opis">
+      <p style="font-weight: bold; font-family: Montserrat; font-size: 40px; text-align: center">We are glad that you decided to donate through our site!</p>
+      <p>Over 100 milion successfully closed stories.</p>
+      <!--<img url="https://images.squarespace-cdn.com/content/v1/5cf81d221fa0100001acb02f/1587601583715-NXXBUKW8ST27K3PJ0EJI/DSC_0432_edit.jpg" style="height: 50%; width: 100%">-->
+    </div>
+    <div class="detalji">
+      <h4>We will need  to make our story happen.</h4>
 
-  <p style="font-weight: bold; font-family: Montserrat; font-size: 30px; text-align: center"> To see stories and be able to donate, please log in.</p>
-  <br> <br> <br>
-
-
+    </div>
+  </div>
 </div>
