--- a/Angular/src/app/log-in/log-in.component.html
+++ b/Angular/src/app/log-in/log-in.component.html
@@ -1,7 +1,6 @@
-
-
 <form [formGroup]="LogInForma" (ngSubmit)="onSubmit()">
   <div class="kontejner">
+    <div class="slikaPozadina"></div>
     <p style="font-weight: bold; font-size: 50px; color: white"> Log in</p>
   <label>
     <p style="font-weight: bold; font-size: 30px; color: white"> Username: </p>
