--- a/Angular/src/styles.scss
+++ b/Angular/src/styles.scss
@@ -6,8 +6,9 @@ body, html {
 body {
   font-family: Montserrat;
   font-size: 18px;
-  /*background-image: url("https://img.freepik.com/premium-vector/donation-box-charity-concept-human-hands-putting-money-cash-love-heart-donation-box-together-helping-doing-charity-vector-illustration_140689-3158.jpg?w=2000");*/
-  background-color: #E0FBFC;
+  background-image: url("https://images.rawpixel.com/image_800/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvbHIvdjIxMWJhdGNoMTEta2liLTMwNC1jaGFyaXR5XzIuanBn.jpg?s=W1GJFDeuEvSSIB1z_lCs4JP7ptGo_cecHQGi5OM7DaA");
+  /*background-color: #E0FBFC;*/
+  backdrop-filter: blur(9px);
   background-repeat: no-repeat;
   background-size: cover;
   background-position:center;
