--- a/Angular/src/app/administrator/administrator.component.html
+++ b/Angular/src/app/administrator/administrator.component.html
@@ -1,13 +1,13 @@
 
-<table class="table table-dark" style="width:90%">
+<table class=" table table-dark " style="width:90%">
   <thead>
   <tr>
-    <th>Ime</th>
-    <th>Prezime</th>
+    <th>Name</th>
+    <th>Surname</th>
     <th>Email</th>
     <th>Username</th>
-    <th>Opstina rođenja</th>
-    <th>Opcije</th>
+    <th>City of birth</th>
+    <th>Options</th>
   </tr>
   </thead>
   <tbody>
@@ -18,8 +18,8 @@
       <td>{{x.username}}</td>
       <td>{{x.opstina_rodjenja_opis}}</td>
       <td>
-        <button type="button" class="btn btn-danger" style="margin-right:1%" (click)="odabraniKorisnik=x">Obrisi</button>
-        <button class="btn btn-info">Posalji poruku</button>
+        <button type="button" class="btn btn-danger" style="margin-right:1%" (click)="odabraniKorisnik=x">Delete</button>
+        <button class="btn btn-info">Send message</button>
       </td>
     </tr>
   </tbody>
@@ -29,7 +29,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLiveLabel">Obrisati korisnika {{odabraniKorisnik.username}}?</h5>
+        <h5 class="modal-title" id="exampleModalLiveLabel">Delete user <b>{{odabraniKorisnik.username}}</b> ?</h5>
         <button type="button" class="btn-close" aria-label="Close" (click)="odabraniKorisnik=null"></button>
       </div>
       <div class="modal-footer">
