--- a/Angular/src/app/donation/donation.component.scss
+++ b/Angular/src/app/donation/donation.component.scss
@@ -1,10 +1,9 @@
-
 .kontejner{
-  background-color: rgba(0,0,0,0.567);
+  background-color: #99C1D9;
   margin:5px;
   padding: 20px;
-  max-height:100%;
-  max-width:100%;
+  height:100%;
+  border-radius: 30px;
 }
 
 h3{
@@ -14,11 +13,9 @@ h3{
 }
 
 .kartica{
-  width:100%;
-  border:2px solid black;
-  height:100%;
-  display:flex;
-  flex-direction:row;
+margin-left: 20%;
+  margin-right: 20%;
+  width: 60%;
 }
 .desno{
   height:100%;
