--- a/Angular/src/app/story-details/story-details.component.scss
+++ b/Angular/src/app/story-details/story-details.component.scss
@@ -2,6 +2,21 @@
 body{
   display: flex;
 }
+.previous {
+  background-color: #f1f1f1;
+  color: black;
+  border-radius: 50%;
+}
+a {
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
+}
+
+a:hover {
+  background-color: #ddd;
+  color: black;
+}
 .back{
   background-color: #99C1D9;
   margin:5px;
@@ -20,6 +35,7 @@ h3{
   color: white;
   font-family: Montserrat;
 }
+
 .opis{
   color: white;
   font-family: Montserrat;
