--- a/Angular/src/styles.scss
+++ b/Angular/src/styles.scss
@@ -1,7 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 body, html {
   height: 100%;
+  width: 100%;
   margin: 0 auto;
+}
+*{
+  box-sizing: border-box;
 }
 body {
   font-family: Montserrat;
