--- a/Angular/src/app/story-details/story-details.component.scss
+++ b/Angular/src/app/story-details/story-details.component.scss
@@ -19,7 +19,6 @@ a:hover {
 }
 .back{
   background-color: #99C1D9;
-  margin:5px;
   padding: 20px;
   height:100%;
   border-radius: 30px;
@@ -43,6 +42,7 @@ h3{
   background-color:  rgba(205,205,205,0.5);
   padding: 2%;
   border-radius: 30px;
+  margin-bottom: 10%;
 }
 .opis p{
   text-align: center;
@@ -53,6 +53,7 @@ h3{
   max-width: 60%;
   margin-left: 3%;
   padding: 2%;
+  margin-bottom: 10%;
 }
 .detalji h4{
   color: white;
