--- a/Angular/src/app/komentari/komentari.component.html
+++ b/Angular/src/app/komentari/komentari.component.html
@@ -2,13 +2,20 @@
   Write your own comment
 </p>
 <textarea id="komentar" [(ngModel)]="sadrzajKomentara"></textarea>
-<button (click)="dodajKomentar()">Dodaj komentar</button>
+<button (click)="dodajKomentar()" style="background-color: #EE6C4D; color: white; border-radius: 30px; border:none">Add your comment</button>
 
 <div *ngFor="let x of komentariPodaci.komentari">
-    <p>{{x.napisaoIme}}</p> <p>{{x.sadrzajKomentara}}</p>
+    <p>{{x.napisaoIme}}</p>
+    <p>{{x.sadrzajKomentara}}</p>
   <hr>
 </div>
+<div style="display:inline-block; width:100%; height:100%">
+  <div style="width:100%">
+    <button type="button" class="btn btn-dark btn-lg" style="background-color: #EE6C4D; color: white; border-radius: 30px; border:none"
+            *ngIf="trenutnaStranica > 1" (click)="prethodna()">Previous</button>
+    <button type="button" class="btn btn-dark btn-lg" style="background-color: #EE6C4D; color: white; border-radius: 30px; border:none; float: right"
+            *ngIf="trenutnaStranica < totalPages" (click)="sljedeca()">Next</button>
+  </div>
+</div>
 
-<button *ngIf="trenutnaStranica>1" (click)="prethodna()">PREVIOUS</button> <br>
-<button *ngIf="trenutnaStranica < totalPages" (click)="sljedeca()">NEXT</button>
 
