--- a/Angular/src/app/donation/donation.component.scss
+++ b/Angular/src/app/donation/donation.component.scss
@@ -1,21 +1,37 @@
 .kontejner{
-  background-color: #99C1D9;
+/*  background-color: #99C1D9;*/
   margin:5px;
-  padding: 20px;
   height:100%;
   border-radius: 30px;
+}
+.slika{
+  height: 100%;
+}
+.donacija{
+  background-color: #3D5A80;
+  margin-left: 20%;
+  margin-right: 20%;
+  width: 60% ;
+  border-radius: 30px;
+  padding: 2%;
 }
 
 h3{
   font-weight: bold;
   text-align: center;
   color: white;
+  margin-top: 3%;
+}
+.odabirKartice{
+  border-radius: 30px;
+  border: white solid 1px;
+  width: 90%;
+  margin-right: 5%;
+  margin-left: 5%;
 }
 
 .kartica{
-margin-left: 20%;
-  margin-right: 20%;
-  width: 60%;
+  width: 100%;
 }
 .desno{
   height:100%;
