--- a/Angular/src/styles.scss
+++ b/Angular/src/styles.scss
@@ -1,11 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
-body, html {
-  height: 100%;
-  width: 100%;
-  margin: 0 auto;
-}
 *{
   box-sizing: border-box;
+}
+app-root{
+  height: 100%;
 }
 body {
   font-family: Montserrat;
