--- a/Angular/src/app/about/about.component.scss
+++ b/Angular/src/app/about/about.component.scss
@@ -1,3 +1,7 @@
 .pozadina{
-  background: rgba(253, 254, 255, 0.8);
+  height:100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
