--- a/Angular/src/app/administrator/administrator.component.html
+++ b/Angular/src/app/administrator/administrator.component.html
@@ -1,5 +1,5 @@
 
-<table class=" table table-dark " style="width:90%">
+<table class=" table table-dark " style="width:100%;">
   <thead>
   <tr>
     <th>Name</th>
