--- a/Angular/src/app/donation/donation.component.html
+++ b/Angular/src/app/donation/donation.component.html
@@ -45,7 +45,7 @@
         <button type="button" style="color: white; margin-left: 80%; border: none; background-color:#3D5A80;font-size: 30px " (click)="validiraj=null">X</button>
       </div>
 
-    <div class="odabirKartice">
+    <div class="col-md-6">
       <label class="form-label" style="color: white; font-weight: bold; margin-left: 2%; margin-bottom: 2%; margin-top: 2%">Card number</label>
       <input type="number" class="form-control" placeholder="eg. 555444333" formControlName="brojKartice" style="width:90%; border-radius: 30px; border: none; margin-left: 2%; margin-bottom: 2%">
       <div style="color:darkred; font-weight: bold" *ngIf="validiraj.controls['brojKartice'].invalid && (validiraj.controls['brojKartice'].dirty || validiraj.controls['brojKartice'].touched)">
@@ -61,7 +61,7 @@
       </div>
     </div>
 
-    <div class="odabirKartice">
+    <div class="col-md-6">
       <label class="form-label" style="color: white; font-weight: bold; margin-left: 2%; margin-bottom: 2%; margin-top: 2%">Card type</label>
       <input type="text" class="form-control" rows="4" placeholder="eg. Visa" formControlName="tipKartice" style="width:90%; border-radius: 30px; border: none; margin-left: 2%; margin-bottom: 2%">
       <div style="color:darkred; font-weight: bold" *ngIf="validiraj.controls['tipKartice'].invalid && (validiraj.controls['tipKartice'].dirty || validiraj.controls['tipKartice'].touched)">
@@ -71,7 +71,7 @@
       </div>
     </div>
 
-    <div class="odabirKartice">
+    <div class="col-md-6">
       <label class="form-label" style="color: white; font-weight: bold; margin-left: 2%; margin-bottom: 2%; margin-top: 2%">CVV</label>
       <input type="number" class="form-control" rows="4" placeholder="* * *" formControlName="cvv" style="width:90%; border-radius: 30px; border: none; margin-left: 2%; margin-bottom: 2%">
       <div style="color:darkred; font-weight: bold" *ngIf="validiraj.controls['cvv'].invalid && (validiraj.controls['cvv'].dirty || validiraj.controls['cvv'].touched)">
@@ -90,7 +90,7 @@
       </div>
     </div>
 
-    <div class="odabirKartice">
+    <div class="col-md-6">
       <label class="form-label" style="color: white; font-weight: bold; margin-left: 2%; margin-bottom: 2%; margin-top: 2%">Expiring month</label>
       <input type="number" class="form-control"  formControlName="mjesecVazenja" style="width:90%; border-radius: 30px; border: none; margin-left: 2%; margin-bottom: 2%">
       <div style="color:darkred; font-weight: bold" *ngIf="validiraj.controls['mjesecVazenja'].invalid && (validiraj.controls['mjesecVazenja'].dirty || validiraj.controls['mjesecVazenja'].touched)">
@@ -100,7 +100,7 @@
       </div>
     </div>
 
-    <div class="odabirKartice">
+    <div class="col-md-6">
       <label class="form-label" style="color: white; font-weight: bold; margin-left: 2%; margin-bottom: 2%; margin-top: 2%">Expiring year</label>
       <input type="number" class="form-control"  formControlName="godinaVazenja" style="width:90%; border-radius: 30px; border: none; margin-left: 2%; margin-bottom: 2%">
       <div style="color:darkred; font-weight: bold" *ngIf="validiraj.controls['godinaVazenja'].invalid && (validiraj.controls['godinaVazenja'].dirty || validiraj.controls['godinaVazenja'].touched)">
@@ -112,6 +112,7 @@
 
     <button type="button" style="width:30%; height:20%; margin:2%; color: white; background-color: #FF605C; border: none; border-radius: 30px; margin-left:60% "(click)="validiraj=null">Close</button>
     <button type="submit" style="width:30%; height:20%; margin:2%; color: white; background-color: #00CA4C; border: none; border-radius: 30px; margin-left:60% " >Save </button>
+
 
   </form>
 </div>
