--- a/Angular/src/app/stories/stories.component.html
+++ b/Angular/src/app/stories/stories.component.html
@@ -1,11 +1,12 @@
 
 <div *ngIf="odabranaPrica==null" class="kontejner">
-<h1>Stories opened for donations</h1>
+<h1 *ngIf="informacije().autentifikacijaToken.korisnickinalog.isKorisnik">Stories opened for donations</h1>
+<h1 *ngIf="informacije().autentifikacijaToken.korisnickinalog.isAdmin">Stories review</h1>
   <button *ngIf="informacije().autentifikacijaToken.korisnickinalog.isKorisnik" type="button" class="btn btn-dark btn-lg" style="width:30%; height:20%; margin:2%; color: white; background-color: #EE6C4D; border: none; border-radius: 30px; margin-left:60% " (click)="novaPrica()" >Add your story</button>
 <br> <br>
   <div class="dugmad">
-  <button id="prvi" (click)="preuzmiTudje()" style="border: none; border-radius:30px; color: black; background-color: #99C1D9; font-weight: bold; ">Other stories</button>
-  <button id="drugi" (click)="preuzmiMoje()" style="border: none; border-radius:30px; color: black; background-color: #99C1D9; float: right; font-weight: bold">My stories</button>
+  <button *ngIf="informacije().autentifikacijaToken.korisnickinalog.isKorisnik" id="prvi" (click)="preuzmiTudje()" style="border: none; border-radius:30px; color: black; background-color: #99C1D9; font-weight: bold; ">Other stories</button>
+  <button *ngIf="informacije().autentifikacijaToken.korisnickinalog.isKorisnik" id="drugi" (click)="preuzmiMoje()" style="border: none; border-radius:30px; color: black; background-color: #99C1D9; float: right; font-weight: bold">My stories</button>
   </div>
   <div *ngIf="prica_tudja!=null">
   <div *ngFor="let x of prica_tudja.price" class="kartica">
@@ -27,7 +28,7 @@
       <hr>
     </div>
   </div>
-  
+
 <br> <br>
   <div style="display:inline-block; width:100%; height:100%">
     <div style="width:100%">
