--- a/Angular/src/app/user-profile/user-profile.component.html
+++ b/Angular/src/app/user-profile/user-profile.component.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <div class="kontejner">
+  <div *ngIf="otvoriFormu!=true && otvoriFormu2!=true" class="kontejner">
     <h1>Your profile</h1> <br>
     <div class="card">
       <img src="{{getSlikuKorisnika(loginInfo().autentifikacijaToken.korisnickinalog.id)}}" alt="No profile picture!" style="width:100%; border-radius: 30px">
@@ -14,59 +14,57 @@
     <button type="submit" (click)="otvoriFormu2=true" style="background-color: #EE6C4D; color: white; border-radius: 30px; border:none; font-size: 25px; padding: 8px; float: right"> Change password</button>
   </div>
 
-  <div *ngIf="otvoriFormu==true" class="modal fade show" id="exampleModalLive" tabindex="-1" aria-labelledby="exampleModalLiveLabel" aria-modal="true" role="dialog" style="display: block;">
-    <div class="modal-dialog">
-      <div class="modal-content" style="background-color: gray">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLiveLabel" style="font-weight: bold">New profile picture</h5>
-          <button type="button" class="btn-close" aria-label="Close" (click)="otvoriFormu=false"></button>
+  <div *ngIf="otvoriFormu==true" class="donacija">
+
+        <div class="gornjiDio">
+          <h5 style="color:white; font-weight: bold">New profile picture</h5>
+          <button type="button"(click)="otvoriFormu=false" style="color: white; font-weight: bold; background-color: #99C1D9; border: none; margin-left: 80%; font-size: 25px "> X </button>
         </div>
 
-        <div class="mb-3">
-          <h2>Current picture</h2>
-          <img src="{{getSlikuKorisnika(loginInfo().autentifikacijaToken.korisnickinalog.id)}}" style="height: 50%; width: 50%">
-        </div>
 
-        <div class="mb-3">
-          <label for="formFile" class="form-label" style="font-weight: bold">Upload new picture</label>
+        <div style="margin-left: 20%; margin-right: 20%; width: 60%">
+          <label style="color: white; font-weight: bold;text-align: center">Current picture</label>
+          <img src="{{getSlikuKorisnika(loginInfo().autentifikacijaToken.korisnickinalog.id)}}" style="height: 80%; width: 80%">
+        </div>
+    <br>
+          <hr style="color: white; font-weight: bold">
+    <br>
+        <div style="margin-left: 20%; margin-right: 20%; width: 60%">
+          <label for="formFile" class="form-label" style="font-weight: bold; color: white">Upload new picture</label>
           <input class="form-control" type="file" id="formFile" accept="image/*" (change)="generisiPreview()">
-          <img style="width: 100%; height: 100%" src="{{novaSlika.slikaKorisnika}}">
+          <img style="width: 80%; height: 80%" src="{{novaSlika.slikaKorisnika}}">
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary btn-lg" (click)="otvoriFormu=false">Close</button>
-          <button type="button" class="btn btn-dark btn-lg" (click)="SaveDugme()">Save </button>
-        </div>
-      </div>
-    </div>
+
+
+          <button type="button" style="width:40%; height:20%; margin:2%; color: white; background-color: #FF605C; border: none; border-radius: 30px; margin-left:60% " (click)="otvoriFormu=false">Close</button>
+          <button type="button" style="width:40%; height:20%; margin:2%; color: white; background-color: #00CA4C; border: none; border-radius: 30px; margin-left:60% " (click)="SaveDugme()">Save </button>
   </div>
 
 
 
-<div *ngIf="otvoriFormu2==true" class="modal fade show" id="exampleModalLive2" tabindex="-1" aria-labelledby="exampleModalLiveLabel" aria-modal="true" role="dialog" style="display: block;">
-  <div class="modal-dialog">
-    <div class="modal-content"  style="background-color: gray">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLiveLabel2" style="font-weight: bold">Change password</h5>
-        <button type="button" class="btn-close" aria-label="Close" (click)="otvoriFormu2=false"></button>
+
+<div *ngIf="otvoriFormu2==true" class="donacija">
+      <div class="gornjiDio">
+        <h5 style="color: white; font-weight: bold">Change password</h5>
+        <button type="button" style="color: white; font-weight: bold; background-color: #99C1D9; border: none; margin-left: 75%; font-size: 25px" (click)="otvoriFormu2=false">X</button>
       </div>
 
-      <div class="modal-body">
-        <div class="mb-3">
-          <label class="form-label" style="font-weight: bold">Current password</label>
-          <input class="form-control" [(ngModel)]="novaSifra.stariPassword">
+
+        <div style="margin-left: 20%; margin-right: 20%; width: 60%">
+          <label class="form-label" style="font-weight: bold; color: white">Current password</label>
+          <input class="form-control" style="border-radius: 30px" [(ngModel)]="novaSifra.stariPassword">
         </div>
 
-        <div class="modal-body">
-          <div class="mb-3">
-            <label class="form-label" style="font-weight: bold">New password</label>
-            <input class="form-control" [(ngModel)]="novaSifra.noviPassword">
+
+          <div style="margin-left: 20%; margin-right: 20%; width: 60%">
+            <label class="form-label" style="font-weight: bold; color: white">New password</label>
+            <input class="form-control" style="border-radius: 30px" [(ngModel)]="novaSifra.noviPassword">
           </div>
 
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary btn-lg" (click)="otvoriFormu2=false">Close</button>
-        <button type="button" class="btn btn-dark btn-lg" (click)="PromijeniPassword()">Save </button>
-      </div>
-    </div>
-  </div>
+
+        <button type="button" style="width:40%; height:20%; margin:2%; color: white; background-color: #FF605C; border: none; border-radius: 30px; margin-left:60% " (click)="otvoriFormu2=false">Close</button>
+        <button type="button" style="width:40%; height:20%; margin:2%; color: white; background-color: #00CA4C; border: none; border-radius: 30px; margin-left:60% "  (click)="PromijeniPassword()">Save </button>
 </div>
+
+
 
