--- a/Angular/src/app/user-profile/user-profile.component.scss
+++ b/Angular/src/app/user-profile/user-profile.component.scss
@@ -4,6 +4,10 @@ h1{
   font-weight: bold;
   font-family: Montserrat;
 }
+.gornjiDio{
+  display: flex;
+  flex-direction: row;
+}
 h2{
   font-weight: bold;
   border-radius: 30px;
@@ -15,11 +19,22 @@ h3{
   color:#3D5A80
 }
 .kontejner{
-  background-color: #99C1D9;
+  /*background-color: #99C1D9;*/
+  border:1px solid black;
   margin:5px;
   padding: 20px;
   height:100%;
   border-radius: 30px;
+}
+
+.donacija{
+  background-color: #99C1D9;
+  margin-left: 20%;
+  margin-right: 20%;
+  width: 60% ;
+  border-radius: 30px;
+  padding: 2%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
 .card {
@@ -29,5 +44,6 @@ h3{
   text-align: center;
   box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
   border-radius: 30px;
+  margin-bottom: 2%;
 }
 
